Closed Bug 808873 Opened 13 years ago Closed 13 years ago

GLib-GObject-WARNING **: invalid cast from `GtkWindow' to `MozContainer' opening print or file dialog

Categories

(Core :: Widget: Gtk, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla19

People

(Reporter: karlt, Assigned: karlt)

References

Details

Attachments

(1 file)

Harmless assertion failure in MOZ_CONTAINER() in get_gtk_window_for_nsiwidget. The code needs only a GtkWidget, not necessarily MozContainer.
Changing the meaning of NS_NATIVE_SHELLWIDGET a little to now return the toplevel widget even if it is an ancestor of this nsIWidget, and sharing the same code for this.
Attachment #678577 - Flags: review?(roc)
Comment on attachment 678577 [details] [diff] [review] return toplevel GtkWidget for NS_NATIVE_SHELLWIDGET Review of attachment 678577 [details] [diff] [review]: ----------------------------------------------------------------- Add a comment to nsIWidget.h describing exactly what NS_NATIVE_SHELLWIDGET returns
Attachment #678577 - Flags: review?(roc) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
Added https://hg.mozilla.org/integration/mozilla-inbound/rev/3985e437a262 to fix a null check missed at http://hg.mozilla.org/mozilla-central/rev/dfe49308dc99#l4.54 which led to a crash in test_modal_prompts.html with a PGO build https://tbpl.mozilla.org/php/getParsedLog.php?id=16810523&tree=Mozilla-Inbound#error1 0 libxul.so!nsWindow::GetToplevelWidget() [nsWindow.cpp:83a5022755ce : 4473 + 0x0] eip = 0x0186c752 esp = 0xbf9cd740 ebp = 0xbf9cd758 ebx = 0x02e2a07c esi = 0x9a73f030 edi = 0x95a0ad00 eax = 0x00000000 ecx = 0xffffffff edx = 0x95a0ad00 efl = 0x00210202 Found by: given as instruction pointer in context 1 libxul.so!nsWindow::GetAttention(int) [nsWindow.cpp:83a5022755ce : 1877 + 0xd] eip = 0x0186c9f5 esp = 0xbf9cd760 ebp = 0xbf9cd798 ebx = 0x02e2a07c esi = 0x9a73f030 edi = 0x95a0ad00 Found by: call frame info
There are now nightlies without this fix :(
(In reply to Mike Hommey [:glandium] from comment #7) > There are now nightlies without this fix :( Merged to m-c and respun Nightlies on 8671bfc8e9a8.
Depends on: 809458
(In reply to Ed Morley (Away 9th Nov) [:edmorley UTC+0] from comment #9) > (In reply to Mike Hommey [:glandium] from comment #7) > > There are now nightlies without this fix :( > > Merged to m-c and respun Nightlies on 8671bfc8e9a8. SeaMonkey nightlies were not respun: the current linux-i686 nightly is based on mozilla-central changeset e587aa26326e. The linux-x86_64 (based on mozilla-central changeset 70c55e9a3ef6) was not produced because of an "exception" (purple Tinderbox status) but an hourly based on the exact same m-c and c-c changesets as the nightly was posted and had the bug, see bug 809458.
Blocks: 809458
No longer depends on: 809458
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: