b=808873 return toplevel GtkWidget for NS_NATIVE_SHELLWIDGET and use it r=roc

--HG--
extra : transplant_source : _gK%D6%5D%96%1A%3A%3A%21j%40E%09%FF%84%D3%8F%C6%A5